--- a/blog-vista/styles/Home.module.css
+++ b/blog-vista/styles/Home.module.css
@@ -1,10 +1,12 @@
+.body{
+  font-family: Arial, Helvetica, sans-serif;
+}
 .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  
 }
 
 .description {
@@ -107,6 +109,8 @@
 .logo {
   position: relative;
 }
+
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -226,4 +230,16 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+
+.mainNav ul{
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+.mainNav ul li{
+  margin: 0 24px;
+  list-style: none;
+  font-weight: bold;
 }
