start designing pages

--- a/blog-vista/styles/Home.module.css
+++ b/blog-vista/styles/Home.module.css
@@ -1,6 +1,4 @@
-.font{
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -244,4 +242,8 @@
   font-weight: bold;
   text-decoration: none;
   color: black;
+}
+.myImg{
+  border-radius: 10px;
+  
 }
