--- a/blog-vista/styles/Navbar.module.css
+++ b/blog-vista/styles/Navbar.module.css
@@ -1,15 +1,17 @@
-.navbar { 
-   
+ .navbar { 
     color: #333;
-    padding: 10px 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    background: #efefef;
+    box-shadow: 0px 0px 8px #33333351;
+    
   }
   
   .navContainer {
-    max-width: 960px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    
   }
   
  
@@ -18,6 +20,13 @@
     font-weight: bold;
     display: flex;
     align-items: center;
+    padding-left: 0;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5;
+  }
+  .navLinks ul{
+    padding: 0;
+    margin-bottom: 0;
   }
   
   .navLinks li {
@@ -25,81 +34,23 @@
   }
   
   .navLinks a {
-    color: #333;
+    color: #333333;
     text-decoration: none;
     transition: opacity 0.3s ease;
   }
   
   .navLinks a:hover {
     opacity: 0.7;
-  }
-  
+    color: #03371b;
+  } 
 
-
-  /* Media query for responsiveness */
-  @media (max-width: 768px) {
-    .navContainer {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .navLinks {
-      margin-top: 10px;
-    }
-  
-    .navLinks li {
-      margin-left: 0;
-      margin-bottom: 10px;
-    }
-  }
-
-  .burgerMenu {
-    display: none;
-    cursor: pointer;
+@media(max-width: 720px){
+  .navLinks{
+   padding-left: 0;
+   margin-top: 1rem;
   }
   
-  .bar {
-    width: 25px;
-    height: 3px;
-    background-color: #333;
-    margin: 5px 0;
-    transition: transform 0.3s ease;
+  .navLinks li {
+    margin: 10px;
   }
-  
-  .active {
-    transform: rotate(-180deg) translate(-4px, 5px);
-  }
-  
-  .show {
-    display: block;
-  }
-  
-  /* Media query for burger menu in mobile */
-  @media (max-width: 768px) {
-    .burgerMenu {
-      display: block;
-    }
-  
-    .navLinks {
-      display: none;
-    }
-  
-    .navContainer {
-      position: relative;
-    }
-  
-    .navLinks.show {
-      display: block;
-      position: absolute;
-      top: 70px;
-      left: 0;
-      width: 100%;
-      background-color: #efefef;
-      text-align: center;
-      padding: 20px 0;
-    }
-  
-    .navLinks.show li {
-      margin-bottom: 15px;
-    }
-  }
+}
