--- a/blog-vista/styles/about.module.css
+++ b/blog-vista/styles/about.module.css
@@ -42,3 +42,30 @@
     font-size: 16px;
     line-height: 1.8;
   }
+  @media(max-width:720px){
+    .aboutContent h2 {
+      font-size: 20px;
+      font-weight: bold;
+    }
+    .aboutContent p {
+      font-size: 13px;
+      line-height: 1.8;
+      padding-left: 2px;
+      padding-right: 2px;
+    }
+    .header {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 14px;
+    }
+    .header h1{
+      font-size: 23px;
+    }
+    .container {
+      
+      padding: 0px;
+    }
+    
+  }
