--- a/blog-vista/styles/blog.module.css
+++ b/blog-vista/styles/blog.module.css
@@ -1,8 +1,34 @@
-.main {
+/* .main {
  
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     
+  } */
+
+  .blogItem {
+    background-color: #333;
+    border-radius: 8px;
+    padding: 20px;
+    margin-top: 20px;
   }
+  
+  .blogItem h3 {
+    color: #fff;
+    margin-bottom: 10px;
+  }
+  
+  .blogItem p {
+    color: #ccc;
+  }
+ @media(max-width:720px){
+   
+  .blogItem h3 {
+    font-size: 20px;
+  }
+  
+  .blogItem p {
+    font-size: 14px;
+  }
+ }
