--- a/blog-vista/styles/blogPost.module.css
+++ b/blog-vista/styles/blogPost.module.css
@@ -1,5 +1,5 @@
 .container {
-    max-width: 960px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
   }
@@ -9,36 +9,32 @@
     color: #fff;
     text-align: center;
     padding: 20px 0;
+    margin-bottom: 2rem;
   }
   
   .header h1 {
-    font-size: 36px;
+    font-size: 30px;
     margin: 0;
   }
   
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 40px 0;
+  .chapterItem h3{
+    font-size: 20px;
   }
-  
-  .profileImage {
-    display: block;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  .chapterItem p{
+    font-size: 14px;
   }
-  
-  .aboutContent {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .aboutContent h2 {
-    font-size: 28px;
-  }
-  
-  .aboutContent p {
-    font-size: 16px;
-    line-height: 1.8;
+  @media(max-width:720px){
+    .container{
+      padding: 0;
+    }
+    .chapterItem h3{
+      padding-left: 5px;
+    }
+    .chapterItem p{
+      padding-left: 5px;
+    }
+    .header h1 {
+      font-size: 23px;
+      
+    }
   }
