--- a/blog-vista/styles/contact.module.css
+++ b/blog-vista/styles/contact.module.css
@@ -2,15 +2,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    margin-top: 30px;
   }
   
   .contactContent {
     text-align: center;
     padding: 2rem;
     border-radius: 8px;
-    background-color: #f4f4f4;
+    background-color: #333;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  }
+  .contactContent h1{
+    color: #fff;
+  }
+  .contactContent p{
+    color: #fff;
   }
   
   .contactForm {
@@ -22,6 +28,7 @@
   
   .contactForm label {
     font-weight: bold;
+    color: #fff;
   }
   
   .contactForm input,
@@ -31,11 +38,12 @@
     margin: 0.5rem 0;
     border: 1px solid #ccc;
     border-radius: 4px;
+    outline: none;
   }
   
   .contactForm button {
     padding: 0.5rem 1rem;
-    background-color: #007bff;
+    background-color: #004115;
     color: white;
     border: none;
     border-radius: 4px;
@@ -44,6 +52,15 @@
   }
   
   .contactForm button:hover {
-    background-color: #0056b3;
+    background-color: #052e01;
   }
+  @media(max-width:720px){
+    .contactContent h1{
+      color: #fff;
+    }
+    .contactContent p{
+      color: #fff;
+    }
+  }
+  
   
