--- a/blog-vista/styles/globals.css
+++ b/blog-vista/styles/globals.css
@@ -106,6 +106,8 @@ a {
   }
 } */
 
-.fontstyle{
+/* .fontstyle{
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
+
+@import 'bootstrap/dist/css/bootstrap.min.css';
